# mcp-server-fuzzer

./: README.md  mcp_fuzzer_client.py  pyproject.toml  todo.md
mcp_fuzzer/: client.py  strategies.py
mcp_fuzzer/auth/: manager.py
mcp_fuzzer/gui/: main_window.py
mcp_fuzzer/reports/: reporter.py
mcp_fuzzer/safety_system/: safety.py  system_blocker.py
mcp_fuzzer/transport/: base.py  factory.py  http.py  sse.py  stdio.py  streamablehttp.py
test_reports/: fuzzing_report_20250827_223732.json  fuzzing_report_20250827_223732.txt
