[project]
name = "mcp-fuzzer"
version = "0.1.0"
description = "MCP server fuzzer client and utilities"
requires-python = ">=3.8"
dependencies = [
    "httpx",
    "hypothesis",
    "rich",
    "PyQt6"
]

[project.scripts]
mcp-fuzzer-client = "mcp_fuzzer_client:main"
mcp-fuzzer-gui = "mcp_fuzzer.gui.main_window:main"